--- a/PPMTool/src/main/resources/application.properties
+++ b/PPMTool/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.properties.hibernate.format-sql=true
 
 #Swagger
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+#Jackson
+spring.jackson.serialization..write-dates-as-timestamps=false
