--- a/PPMTool/pom.xml
+++ b/PPMTool/pom.xml
@@ -64,6 +64,12 @@
             <artifactId>spring-boot-starter-validation</artifactId>
             <version>2.6.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.4.4</version>
+        </dependency>
 
     </dependencies>
 
