add logging using SLF4J and logback.xml

--- a/PPMTool/src/main/resources/application-dev.properties
+++ b/PPMTool/src/main/resources/application-dev.properties
@@ -15,3 +15,7 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 #Jackson
 spring.jackson.serialization.write-dates-as-timestamps=false
+
+#Logging
+logging.file.name=ppm-tool-logs
+logging.file.path=./application-logs/${logging.file.name}
