--- a/PPMTool/src/main/resources/application-dev.properties
+++ b/PPMTool/src/main/resources/application-dev.properties
@@ -18,4 +18,4 @@ spring.jackson.serialization.write-dates-as-timestamps=false
 
 #Logging
 logging.file.name=ppm-tool-logs
-logging.file.path=../application-logs/${logging.file.name}
+logging.file.path=../../application-logs/${logging.file.name}
